<resources>
    <string name="app_name">EpicSkins</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="adminDisplay">Admin Only</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="loginLoginHint">Login</string>
    <string name="loginUsernameHint">Enter Username</string>
    <string name="loginPasswordHint">Enter Password</string>
    <string name="loginAdminCodeHint">ADMIN ONLY: Enter Admin Code</string>
    <string name="title_activity_tets">TetsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>